--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -1,20 +1,75 @@
 name: Python Greetings CI/CD
 
-on: 
+on:
   push:
     branches:
       - main
 
 jobs:
   install-pip-deps:
-    runs-on: self-hosted  # Используем локальный агент
+    runs-on: self-hosted
     steps:
-      - name: Checkout repository  # Скачиваем код из репозитория
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Clone python-greetings  # Клонируем код Python-сервиса
-        run: git clone https://github.com/mtararujs/python-greetings python-greetings
+      - name: Clone python-greetings repository
+        uses: actions/checkout@v4
+        with:
+          repository: mtararujs/python-greetings
+          path: python-greetings
 
-      - name: Install dependencies  # Устанавливаем зависимости
-        run: pip install -r python-greetings/requirements.txt
+      - name: Install dependencies
+        working-directory: python-greetings
+        run: pip install -r requirements.txt
 
+  deploy-to-dev:
+    needs: install-pip-deps
+    uses: ./.github/actions/deploy
+    with:
+      env_name: dev
+      port: 7001
+
+  tests-on-dev:
+    needs: deploy-to-dev
+    uses: ./.github/actions/test
+    with:
+      env_name: dev
+
+  deploy-to-staging:
+    needs: tests-on-dev
+    uses: ./.github/actions/deploy
+    with:
+      env_name: staging
+      port: 7002
+
+  tests-on-staging:
+    needs: deploy-to-staging
+    uses: ./.github/actions/test
+    with:
+      env_name: staging
+
+  deploy-to-preprod:
+    needs: tests-on-staging
+    uses: ./.github/actions/deploy
+    with:
+      env_name: preprod
+      port: 7003
+
+  tests-on-preprod:
+    needs: deploy-to-preprod
+    uses: ./.github/actions/test
+    with:
+      env_name: preprod
+
+  deploy-to-prod:
+    needs: tests-on-preprod
+    uses: ./.github/actions/deploy
+    with:
+      env_name: prod
+      port: 7004
+
+  tests-on-prod:
+    needs: deploy-to-prod
+    uses: ./.github/actions/test
+    with:
+      env_name: prod
