--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -1,15 +1,18 @@
-name: Python Greetings CI/CD
+name: Python Greetings CI/CD Pipeline
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   install-pip-deps:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Clone python-greetings repository
@@ -19,57 +22,57 @@ jobs:
           path: python-greetings
 
       - name: Install dependencies
+        run: pip3 install -r requirements.txt
         working-directory: python-greetings
-        run: pip install -r requirements.txt
 
   deploy-to-dev:
     needs: install-pip-deps
     uses: ./.github/actions/deploy
     with:
-      env_name: dev
+      environment: dev
       port: 7001
 
   tests-on-dev:
     needs: deploy-to-dev
     uses: ./.github/actions/test
     with:
-      env_name: dev
+      environment: dev
 
   deploy-to-staging:
     needs: tests-on-dev
     uses: ./.github/actions/deploy
     with:
-      env_name: staging
+      environment: staging
       port: 7002
 
   tests-on-staging:
     needs: deploy-to-staging
     uses: ./.github/actions/test
     with:
-      env_name: staging
+      environment: staging
 
   deploy-to-preprod:
     needs: tests-on-staging
     uses: ./.github/actions/deploy
     with:
-      env_name: preprod
+      environment: preprod
       port: 7003
 
   tests-on-preprod:
     needs: deploy-to-preprod
     uses: ./.github/actions/test
     with:
-      env_name: preprod
+      environment: preprod
 
   deploy-to-prod:
     needs: tests-on-preprod
     uses: ./.github/actions/deploy
     with:
-      env_name: prod
+      environment: prod
       port: 7004
 
   tests-on-prod:
     needs: deploy-to-prod
     uses: ./.github/actions/test
     with:
-      env_name: prod
+      environment: prod
