--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -1,18 +1,16 @@
-name: Python Greetings CI/CD Pipeline
+name: Python Greetings Deployment Pipeline
 
 on:
   push:
     branches:
       - main
   pull_request:
-    branches:
-      - main
 
 jobs:
   install-pip-deps:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Clone python-greetings repository
@@ -29,50 +27,50 @@ jobs:
     needs: install-pip-deps
     uses: ./.github/actions/deploy
     with:
-      environment: dev
+      env_name: dev
       port: 7001
 
   tests-on-dev:
     needs: deploy-to-dev
     uses: ./.github/actions/test
     with:
-      environment: dev
+      env_name: dev
 
   deploy-to-staging:
     needs: tests-on-dev
     uses: ./.github/actions/deploy
     with:
-      environment: staging
+      env_name: staging
       port: 7002
 
   tests-on-staging:
     needs: deploy-to-staging
     uses: ./.github/actions/test
     with:
-      environment: staging
+      env_name: staging
 
   deploy-to-preprod:
     needs: tests-on-staging
     uses: ./.github/actions/deploy
     with:
-      environment: preprod
+      env_name: preprod
       port: 7003
 
   tests-on-preprod:
     needs: deploy-to-preprod
     uses: ./.github/actions/test
     with:
-      environment: preprod
+      env_name: preprod
 
   deploy-to-prod:
     needs: tests-on-preprod
     uses: ./.github/actions/deploy
     with:
-      environment: prod
+      env_name: prod
       port: 7004
 
   tests-on-prod:
     needs: deploy-to-prod
     uses: ./.github/actions/test
     with:
-      environment: prod
+      env_name: prod
