--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -25,52 +25,76 @@ jobs:
 
   deploy-to-dev:
     needs: install-pip-deps
-    uses: ./.github/actions/deploy
-    with:
-      env_name: dev
-      port: 7001
+    runs-on: self-hosted
+    steps:
+      - name: Deploy to Dev
+        uses: ./github/actions/deploy
+        with:
+          env_name: dev
+          port: 7001
 
   tests-on-dev:
     needs: deploy-to-dev
-    uses: ./.github/actions/test
-    with:
-      env_name: dev
+    runs-on: self-hosted
+    steps:
+      - name: Run Tests on Dev
+        uses: ./github/actions/test
+        with:
+          env_name: dev
 
   deploy-to-staging:
     needs: tests-on-dev
-    uses: ./.github/actions/deploy
-    with:
-      env_name: staging
-      port: 7002
+    runs-on: self-hosted
+    steps:
+      - name: Deploy to Staging
+        uses: ./github/actions/deploy
+        with:
+          env_name: staging
+          port: 7002
 
   tests-on-staging:
     needs: deploy-to-staging
-    uses: ./.github/actions/test
-    with:
-      env_name: staging
+    runs-on: self-hosted
+    steps:
+      - name: Run Tests on Staging
+        uses: ./github/actions/test
+        with:
+          env_name: staging
 
   deploy-to-preprod:
     needs: tests-on-staging
-    uses: ./.github/actions/deploy
-    with:
-      env_name: preprod
-      port: 7003
+    runs-on: self-hosted
+    steps:
+      - name: Deploy to Preprod
+        uses: ./github/actions/deploy
+        with:
+          env_name: preprod
+          port: 7003
 
   tests-on-preprod:
     needs: deploy-to-preprod
-    uses: ./.github/actions/test
-    with:
-      env_name: preprod
+    runs-on: self-hosted
+    steps:
+      - name: Run Tests on Preprod
+        uses: ./github/actions/test
+        with:
+          env_name: preprod
 
   deploy-to-prod:
     needs: tests-on-preprod
-    uses: ./.github/actions/deploy
-    with:
-      env_name: prod
-      port: 7004
+    runs-on: self-hosted
+    steps:
+      - name: Deploy to Prod
+        uses: ./github/actions/deploy
+        with:
+          env_name: prod
+          port: 7004
 
   tests-on-prod:
     needs: deploy-to-prod
-    uses: ./.github/actions/test
-    with:
-      env_name: prod
+    runs-on: self-hosted
+    steps:
+      - name: Run Tests on Prod
+        uses: ./github/actions/test
+        with:
+          env_name: prod
