--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -1,12 +1,13 @@
-name: "Deploy to Environment"
-description: "Deploy application to a specific environment"
+name: "Deploy Service"
+description: "Deploys Python Service to Environment"
+
 inputs:
   env_name:
-    required: true
     description: "Environment name (dev, staging, preprod, prod)"
-  port:
     required: true
+  port:
     description: "Port number"
+    required: true
 
 runs:
   using: "composite"
@@ -21,10 +22,8 @@ runs:
         path: python-greetings
 
     - name: Stop existing service
-      shell: cmd
-      run: pm2 delete greetings-app-${{ inputs.env_name }} || exit /b 0
+      run: pm2 delete greetings-app-${{ inputs.env_name }} || true
 
-    - name: Start application
-      shell: cmd
+    - name: Start new service
       run: pm2 start app.py --name greetings-app-${{ inputs.env_name }} -- --port ${{ inputs.port }}
       working-directory: python-greetings
