--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -1,9 +1,10 @@
 name: "Run Tests"
-description: "Run tests for a specific environment"
+description: "Runs API Tests on Environment"
+
 inputs:
   env_name:
-    required: true
     description: "Environment name (dev, staging, preprod, prod)"
+    required: true
 
 runs:
   using: "composite"
@@ -11,18 +12,16 @@ runs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Clone test repository
+    - name: Clone API test repository
       uses: actions/checkout@v4
       with:
         repository: mtararujs/course-js-api-framework
-        path: course-js-api-framework
+        path: api-tests
 
     - name: Install dependencies
-      shell: cmd
       run: npm install
-      working-directory: course-js-api-framework
+      working-directory: api-tests
 
     - name: Run tests
-      shell: cmd
       run: npm run greetings greetings_${{ inputs.env_name }}
-      working-directory: course-js-api-framework
+      working-directory: api-tests
