--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -1,18 +1,14 @@
-name: "Deploy Service"
-description: "Deploys Python Service to Environment"
-
+name: Deploy Service
+description: Deploy Python microservice using PM2
 inputs:
-  env_name:
-    description: "Environment name (dev, staging, preprod, prod)"
+  environment:
     required: true
   port:
-    description: "Port number"
     required: true
-
 runs:
   using: "composite"
   steps:
-    - name: Checkout repository
+    - name: Checkout repo
       uses: actions/checkout@v4
 
     - name: Clone python-greetings repository
@@ -21,9 +17,13 @@ runs:
         repository: mtararujs/python-greetings
         path: python-greetings
 
-    - name: Stop existing service
-      run: pm2 delete greetings-app-${{ inputs.env_name }} || true
+    - name: Stop previous service
+      run: |
+        pm2 delete greetings-app-${{ inputs.environment }} || true
+      shell: bash
 
     - name: Start new service
-      run: pm2 start app.py --name greetings-app-${{ inputs.env_name }} -- --port ${{ inputs.port }}
+      run: |
+        pm2 start app.py --name greetings-app-${{ inputs.environment }} -- --port ${{ inputs.port }}
+      shell: bash
       working-directory: python-greetings
