--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -1,26 +1,105 @@
-name: Run Tests
-description: Run API tests using course-js-api-framework
-inputs:
-  environment:
-    required: true
-runs:
-  using: "composite"
-  steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+name: Python Greetings Deployment Pipeline
 
-    - name: Clone test framework repository
-      uses: actions/checkout@v4
-      with:
-        repository: mtararujs/course-js-api-framework
-        path: test-framework
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
-    - name: Install dependencies
-      run: npm install
-      shell: bash
-      working-directory: test-framework
+jobs:
+  install-pip-deps:
+    runs-on: self-hosted
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Run tests
-      run: npm run greetings greetings_${{ inputs.environment }}
-      shell: bash
-      working-directory: test-framework
+      - name: Clone python-greetings repository
+        uses: actions/checkout@v4
+        with:
+          repository: mtararujs/python-greetings
+          path: python-greetings
+
+      - name: Check Python version
+        shell: cmd
+        run: python --version
+
+      - name: Install dependencies
+        shell: cmd
+        run: pip install -r requirements.txt
+        working-directory: python-greetings
+
+  deploy-to-dev:
+    needs: install-pip-deps
+    runs-on: self-hosted
+    steps:
+      - name: Deploy to Dev
+        uses: ./.github/actions/deploy
+        with:
+          env_name: dev
+          port: 7001
+
+  tests-on-dev:
+    needs: deploy-to-dev
+    runs-on: self-hosted
+    steps:
+      - name: Run Tests on Dev
+        uses: ./.github/actions/test
+        with:
+          env_name: dev
+
+  deploy-to-staging:
+    needs: tests-on-dev
+    runs-on: self-hosted
+    steps:
+      - name: Deploy to Staging
+        uses: ./.github/actions/deploy
+        with:
+          env_name: staging
+          port: 7002
+
+  tests-on-staging:
+    needs: deploy-to-staging
+    runs-on: self-hosted
+    steps:
+      - name: Run Tests on Staging
+        uses: ./.github/actions/test
+        with:
+          env_name: staging
+
+  deploy-to-preprod:
+    needs: tests-on-staging
+    runs-on: self-hosted
+    steps:
+      - name: Deploy to Preprod
+        uses: ./.github/actions/deploy
+        with:
+          env_name: preprod
+          port: 7003
+
+  tests-on-preprod:
+    needs: deploy-to-preprod
+    runs-on: self-hosted
+    steps:
+      - name: Run Tests on Preprod
+        uses: ./.github/actions/test
+        with:
+          env_name: preprod
+
+  deploy-to-prod:
+    needs: tests-on-preprod
+    runs-on: self-hosted
+    steps:
+      - name: Deploy to Prod
+        uses: ./.github/actions/deploy
+        with:
+          env_name: prod
+          port: 7004
+
+  tests-on-prod:
+    needs: deploy-to-prod
+    runs-on: self-hosted
+    steps:
+      - name: Run Tests on Prod
+        uses: ./.github/actions/test
+        with:
+          env_name: prod
