--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -1,4 +1,4 @@
-name: Python Greetings Pipeline
+name: Python Delivery Pipeline
 
 on:
   push:
@@ -9,91 +9,67 @@ jobs:
   install-pip-deps:
     runs-on: self-hosted
     steps:
-      - name: Checkout pipeline repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Checkout python-greetings repo
+      - name: Clone python-greetings repository
         uses: actions/checkout@v4
         with:
           repository: mtararujs/python-greetings
           path: python-greetings
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip3 install -r requirements.txt
         working-directory: python-greetings
 
   deploy-to-dev:
     needs: install-pip-deps
-    runs-on: self-hosted
-    steps:
-      - name: Deploy to dev
-        uses: ./.github/actions/deploy-action
-        with:
-          env_name: dev
-          port: 7001
+    uses: ./.github/actions/deploy
+    with:
+      environment: dev
+      port: 7001
 
   tests-on-dev:
     needs: deploy-to-dev
-    runs-on: self-hosted
-    steps:
-      - name: Run tests on dev
-        uses: ./.github/actions/test-action
-        with:
-          env_name: dev
+    uses: ./.github/actions/test
+    with:
+      environment: dev
 
   deploy-to-staging:
     needs: tests-on-dev
-    runs-on: self-hosted
-    steps:
-      - name: Deploy to staging
-        uses: ./.github/actions/deploy-action
-        with:
-          env_name: staging
-          port: 7002
+    uses: ./.github/actions/deploy
+    with:
+      environment: staging
+      port: 7002
 
   tests-on-staging:
     needs: deploy-to-staging
-    runs-on: self-hosted
-    steps:
-      - name: Run tests on staging
-        uses: ./.github/actions/test-action
-        with:
-          env_name: staging
+    uses: ./.github/actions/test
+    with:
+      environment: staging
 
   deploy-to-preprod:
     needs: tests-on-staging
-    runs-on: self-hosted
-    steps:
-      - name: Deploy to preprod
-        uses: ./.github/actions/deploy-action
-        with:
-          env_name: preprod
-          port: 7003
+    uses: ./.github/actions/deploy
+    with:
+      environment: preprod
+      port: 7003
 
   tests-on-preprod:
     needs: deploy-to-preprod
-    runs-on: self-hosted
-    steps:
-      - name: Run tests on preprod
-        uses: ./.github/actions/test-action
-        with:
-          env_name: preprod
+    uses: ./.github/actions/test
+    with:
+      environment: preprod
 
   deploy-to-prod:
     needs: tests-on-preprod
-    runs-on: self-hosted
-    steps:
-      - name: Deploy to prod
-        uses: ./.github/actions/deploy-action
-        with:
-          env_name: prod
-          port: 7004
+    uses: ./.github/actions/deploy
+    with:
+      environment: prod
+      port: 7004
 
   tests-on-prod:
     needs: deploy-to-prod
-    runs-on: self-hosted
-    steps:
-      - name: Run tests on prod
-        uses: ./.github/actions/test-action
-        with:
-          env_name: prod
+    uses: ./.github/actions/test
+    with:
+      environment: prod
