--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -18,10 +18,10 @@ runs:
 
     - name: Install dependencies
       run: npm install
-      shell: bash
+      shell: cmd
       working-directory: course-js-api-framework
 
     - name: Run tests
       run: npm run greetings greetings_${{ inputs.environment }}
-      shell: bash
+      shell: cmd
       working-directory: course-js-api-framework
