--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -19,24 +19,58 @@ jobs:
           path: python-greetings
 
       - name: Install dependencies
-        run: pip3 install -r requirements.txt
+        run: python -m pip install -r requirements.txt
+        shell: cmd
         working-directory: python-greetings
 
   deploy-to-dev:
     needs: install-pip-deps
-    runs-on: self-hosted
-    steps:
-      - name: Deploy to Dev
-        uses: ./.github/actions/deploy@v1
-        with:
-          environment: dev
-          port: 7001
+    uses: ./.github/actions/deploy
+    with:
+      environment: dev
+      port: 7001
 
   tests-on-dev:
     needs: deploy-to-dev
-    runs-on: self-hosted
-    steps:
-      - name: Run tests on Dev
-        uses: ./.github/actions/test@v1
-        with:
-          environment: dev
+    uses: ./.github/actions/test
+    with:
+      environment: dev
+
+  deploy-to-staging:
+    needs: tests-on-dev
+    uses: ./.github/actions/deploy
+    with:
+      environment: staging
+      port: 7002
+
+  tests-on-staging:
+    needs: deploy-to-staging
+    uses: ./.github/actions/test
+    with:
+      environment: staging
+
+  deploy-to-preprod:
+    needs: tests-on-staging
+    uses: ./.github/actions/deploy
+    with:
+      environment: preprod
+      port: 7003
+
+  tests-on-preprod:
+    needs: deploy-to-preprod
+    uses: ./.github/actions/test
+    with:
+      environment: preprod
+
+  deploy-to-prod:
+    needs: tests-on-preprod
+    uses: ./.github/actions/deploy
+    with:
+      environment: prod
+      port: 7004
+
+  tests-on-prod:
+    needs: deploy-to-prod
+    uses: ./.github/actions/test
+    with:
+      environment: prod
