--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -21,7 +21,13 @@ runs:
       shell: cmd
       working-directory: course-js-api-framework
 
+    - name: Debug: Show available npm scripts
+      run: npm run
+      shell: cmd
+      working-directory: course-js-api-framework
+
     - name: Run tests
       run: npm run greetings greetings_${{ inputs.environment }}
       shell: cmd
       working-directory: course-js-api-framework
+      continue-on-error: true  # Не останавливаем выполнение сразу
