--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v4  # ОБЯЗАТЕЛЬНО ДОБАВЛЯЕМ!
 
       - name: Deploy to Dev
-        uses: ./.github/actions/deploy  # УДАЛИЛ @v1
+        uses: ./.github/actions/deploy/action.yml  # УДАЛИЛ @v1
         with:
           environment: dev
           port: 7001
@@ -44,6 +44,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run tests on Dev
-        uses: ./.github/actions/test
+        uses: ./.github/actions/test/action.yml
         with:
           environment: dev
