--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -28,10 +28,10 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4  # ОБЯЗАТЕЛЬНО ДОБАВЛЯЕМ!
+        uses: actions/checkout@v4  
 
       - name: Deploy to Dev
-        uses: ./.github/actions/deploy/action.yml  # УДАЛИЛ @v1
+        uses: ./.github/actions/deploy
         with:
           environment: dev
           port: 7001
@@ -44,6 +44,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run tests on Dev
-        uses: ./.github/actions/test/action.yml
+        uses: ./.github/actions/test
         with:
           environment: dev
