--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -1,7 +1,10 @@
-name: Python Delivery Pipeline
+name: Python Greetings CI/CD
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
     branches:
       - main
 
@@ -19,18 +22,15 @@ jobs:
           path: python-greetings
 
       - name: Install dependencies
-        run: python -m pip install -r requirements.txt
-        shell: cmd
+        run: pip3 install -r requirements.txt
+        shell: bash
         working-directory: python-greetings
 
   deploy-to-dev:
     needs: install-pip-deps
     runs-on: self-hosted
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4  
-
-      - name: Deploy to Dev
+      - name: Deploy to dev
         uses: ./.github/actions/deploy
         with:
           environment: dev
@@ -40,10 +40,64 @@ jobs:
     needs: deploy-to-dev
     runs-on: self-hosted
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Run tests on Dev
+      - name: Run tests on dev
         uses: ./.github/actions/test
         with:
           environment: dev
+
+  deploy-to-staging:
+    needs: tests-on-dev
+    runs-on: self-hosted
+    steps:
+      - name: Deploy to staging
+        uses: ./.github/actions/deploy
+        with:
+          environment: staging
+          port: 7002
+
+  tests-on-staging:
+    needs: deploy-to-staging
+    runs-on: self-hosted
+    steps:
+      - name: Run tests on staging
+        uses: ./.github/actions/test
+        with:
+          environment: staging
+
+  deploy-to-preprod:
+    needs: tests-on-staging
+    runs-on: self-hosted
+    steps:
+      - name: Deploy to preprod
+        uses: ./.github/actions/deploy
+        with:
+          environment: preprod
+          port: 7003
+
+  tests-on-preprod:
+    needs: deploy-to-preprod
+    runs-on: self-hosted
+    steps:
+      - name: Run tests on preprod
+        uses: ./.github/actions/test
+        with:
+          environment: preprod
+
+  deploy-to-prod:
+    needs: tests-on-preprod
+    runs-on: self-hosted
+    steps:
+      - name: Deploy to prod
+        uses: ./.github/actions/deploy
+        with:
+          environment: prod
+          port: 7004
+
+  tests-on-prod:
+    needs: deploy-to-prod
+    runs-on: self-hosted
+    steps:
+      - name: Run tests on prod
+        uses: ./.github/actions/test
+        with:
+          environment: prod
