--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -23,6 +23,18 @@ runs:
       shell: cmd
       working-directory: course-js-api-framework
 
+    - name: Wait for server to start
+      run: |
+        echo "Waiting for server to start..."
+        for /L %%i in (1,1,30) do (
+          curl -s http://localhost:7001 && exit /B 0
+          echo "Server not ready yet..."
+          timeout /T 3 /NOBREAK >nul
+        )
+        echo "Server did not start in time!"
+        exit /B 1
+      shell: cmd
+
     - name: Run tests
       run: npm run greetings greetings_${{ inputs.environment }}
       shell: cmd
