--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -1,41 +1,22 @@
-name: Run Tests
-description: Runs API tests using course-js-api-framework
-
+name: 'Run Tests'
+description: 'Runs tests in the specified environment'
 inputs:
   environment:
-    description: "Test environment (dev, staging, preprod, prod)"
+    description: 'Testing environment'
     required: true
-
 runs:
-  using: "composite"
+  using: 'composite'
   steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: Clone test framework repository
+    - name: Clone test framework
       uses: actions/checkout@v4
       with:
-        repository: mtararujs/course-js-api-framework
-        path: course-js-api-framework
-
+        repository: 'mtararujs/course-js-api-framework'
+        path: 'course-js-api-framework'
     - name: Install dependencies
       run: npm install
-      shell: cmd
       working-directory: course-js-api-framework
-
-    - name: Wait for server to start
-      run: |
-        echo "Waiting for server to start..."
-        for /L %%i in (1,1,30) do (
-          curl -s http://localhost:7001 && exit /B 0
-          echo "Server not ready yet..."
-          timeout /T 3 /NOBREAK >nul
-        )
-        echo "Server did not start in time!"
-        exit /B 1
-      shell: cmd
-
     - name: Run tests
       run: npm run greetings greetings_${{ inputs.environment }}
-      shell: cmd
       working-directory: course-js-api-framework
