--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -25,52 +25,140 @@ jobs:
 
   deploy-to-dev:
     needs: install-pip-deps
-    uses: ./.github/actions/deploy/action.yml
-    with:
-      environment: dev
-      port: 7001
+    runs-on: self-hosted
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Clone python-greetings repo
+        uses: actions/checkout@v4
+        with:
+          repository: 'mtararujs/python-greetings'
+          path: 'python-greetings'
+      - name: Stop existing service
+        run: pm2 delete greetings-app-dev & set "errorlevel=0"
+      - name: Start new service
+        run: pm2 start app.py --name greetings-app-dev -- --port 7001
+        working-directory: python-greetings
 
   tests-on-dev:
     needs: deploy-to-dev
-    uses: ./.github/actions/test/action.yml
-    with:
-      environment: dev
+    runs-on: self-hosted
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Clone test framework
+        uses: actions/checkout@v4
+        with:
+          repository: 'mtararujs/course-js-api-framework'
+          path: 'course-js-api-framework'
+      - name: Install dependencies
+        run: npm install
+        working-directory: course-js-api-framework
+      - name: Run tests
+        run: npm run greetings greetings_dev
+        working-directory: course-js-api-framework
 
   deploy-to-staging:
     needs: tests-on-dev
-    uses: ./.github/actions/deploy/action.yml
-    with:
-      environment: staging
-      port: 7002
+    runs-on: self-hosted
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Clone python-greetings repo
+        uses: actions/checkout@v4
+        with:
+          repository: 'mtararujs/python-greetings'
+          path: 'python-greetings'
+      - name: Stop existing service
+        run: pm2 delete greetings-app-staging & set "errorlevel=0"
+      - name: Start new service
+        run: pm2 start app.py --name greetings-app-staging -- --port 7002
+        working-directory: python-greetings
 
   tests-on-staging:
     needs: deploy-to-staging
-    uses: ./.github/actions/test/action.yml
-    with:
-      environment: staging
+    runs-on: self-hosted
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Clone test framework
+        uses: actions/checkout@v4
+        with:
+          repository: 'mtararujs/course-js-api-framework'
+          path: 'course-js-api-framework'
+      - name: Install dependencies
+        run: npm install
+        working-directory: course-js-api-framework
+      - name: Run tests
+        run: npm run greetings greetings_staging
+        working-directory: course-js-api-framework
 
   deploy-to-preprod:
     needs: tests-on-staging
-    uses: ./.github/actions/deploy/action.yml
-    with:
-      environment: preprod
-      port: 7003
+    runs-on: self-hosted
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Clone python-greetings repo
+        uses: actions/checkout@v4
+        with:
+          repository: 'mtararujs/python-greetings'
+          path: 'python-greetings'
+      - name: Stop existing service
+        run: pm2 delete greetings-app-preprod & set "errorlevel=0"
+      - name: Start new service
+        run: pm2 start app.py --name greetings-app-preprod -- --port 7003
+        working-directory: python-greetings
 
   tests-on-preprod:
     needs: deploy-to-preprod
-    uses: ./.github/actions/test/action.yml
-    with:
-      environment: preprod
+    runs-on: self-hosted
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Clone test framework
+        uses: actions/checkout@v4
+        with:
+          repository: 'mtararujs/course-js-api-framework'
+          path: 'course-js-api-framework'
+      - name: Install dependencies
+        run: npm install
+        working-directory: course-js-api-framework
+      - name: Run tests
+        run: npm run greetings greetings_preprod
+        working-directory: course-js-api-framework
 
   deploy-to-prod:
     needs: tests-on-preprod
-    uses: ./.github/actions/deploy/action.yml
-    with:
-      environment: prod
-      port: 7004
+    runs-on: self-hosted
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Clone python-greetings repo
+        uses: actions/checkout@v4
+        with:
+          repository: 'mtararujs/python-greetings'
+          path: 'python-greetings'
+      - name: Stop existing service
+        run: pm2 delete greetings-app-prod & set "errorlevel=0"
+      - name: Start new service
+        run: pm2 start app.py --name greetings-app-prod -- --port 7004
+        working-directory: python-greetings
 
   tests-on-prod:
     needs: deploy-to-prod
-    uses: ./.github/actions/test/action.yml
-    with:
-      environment: prod
+    runs-on: self-hosted
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Clone test framework
+        uses: actions/checkout@v4
+        with:
+          repository: 'mtararujs/course-js-api-framework'
+          path: 'course-js-api-framework'
+      - name: Install dependencies
+        run: npm install
+        working-directory: course-js-api-framework
+      - name: Run tests
+        run: npm run greetings greetings_prod
+        working-directory: course-js-api-framework
